style: fix double border in ProseMirror and its parent element

--- a/modules/design-system/base.css
+++ b/modules/design-system/base.css
@@ -34,7 +34,7 @@
   }
 
   /* Global focus-visible ring */
-  :focus-visible {
+  :focus-visible:not(.ProseMirror) {
     outline: none;
     box-shadow: var(--ep-ring);
   }
